--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/15.7.0/nouislider.min.css"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Titan+One&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body class="bg-gradient-to-t from-zinc-950 to-zinc-700 min-h-screen">
     <div id="root"></div>
