--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       rel="stylesheet"
     />
   </head>
-  <body class="bg-gradient-to-t from-zinc-950 to-zinc-700 min-h-screen">
+  <body class="bg-zinc-100 min-h-screen">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
