--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       rel="stylesheet"
     />
   </head>
-  <body class="min-h-screen bg-zinc-200">
+  <body class="min-h-screen bg-zinc-200 text-zinc-600">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
